@@ -73,6 +73,8 @@ public class NessusParser {
     private static RE indeterminate = null;
 
     // private static RE cleared = null; // Not applicable
+    private static RE informational = null;
+
     private static RE normal = null;
 
     private static RE warning = null;
@@ -131,9 +133,10 @@ public class NessusParser {
             cveString = new RE("[:space:]*[Cc][Vv][Ee][:space:]*:[:space:]*([^;]*)");
 
             // Risk factor string
-            riskFactor = new RE("[:space:]*[Rr]isk[:space:]*[Ff]actor[:space:]*:[:space:]*([^;]*)");
-
-            normal = new RE("([Nn]one)");
+            riskFactor =  new RE("[:space:]*[Rr]isk[:space:]*[Ff]actor[:space:]*:([:space:]|;)*([^;{1,2}]*)");
+		          //Risk factor :;;None
+	    informational = new RE("([Ii]nfo)");
+            normal = new RE("([Nn]one)|(;;[Nn]one)");
             warning = new RE("([Ll]ow)");
             minor = new RE("([Mm]edium)");
             major = new RE("([Hh]igh)");
@@ -216,8 +219,15 @@ public class NessusParser {
 
         // Get the risk factor
         if (riskFactor.match(descr)) {
-            risk = riskFactor.getParen(1).trim();
+            risk = riskFactor.getParen(2).trim();
+	    String risk2 = descr;
 
+	    log.debug("Descr Parsed: " + risk);
+	    log.debug("Descr Parsed: " + risk2);
+	    
+	    if (informational.match(risk)) {
+                retval.severity = Constants.SEV_NORMAL;
+            }
             if (normal.match(risk)) {
                 retval.severity = Constants.SEV_NORMAL;
             }
